--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="flexible-container">
             <div class="half-width">
                 <h1><span class="orange-color">skip</span> the diet,<br> just eat healthy<br> with food network</h1>
-                <a target="_blank" href="#" class="link-btn">Order Food</a>
+                <a target="_blank" href=" https://rumman2012.github.io/food-net/" class="link-btn">Order Food</a>
             </div>
             <div class="half-width">
                 <img src="image/Group 8425.png" alt="">
@@ -35,7 +35,7 @@
                     No time
                     for
                     cooking. So let us take care of that, we’re really good at it, we promise</p>
-                <a target="_blank" href="#" class="link-btn">Contact me</a>
+                <a target="_blank" href=" https://rumman2012.github.io/food-net/" class="link-btn">Contact me</a>
             </div>
         </div>
     </section>
